<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_a_service_form_two">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_menu_gallery"
        android:contentDescription="@string/todo"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/my_shadow_y"
        android:text="@string/continue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/my_shadow_y"
        android:text="@string/submit"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_photo" />

    <Button
        android:id="@+id/btn_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/my_shadow_y"
        android:text="@string/add_photo"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_select" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <TextView
            android:id="@+id/tv_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="150dp"
            android:layout_height="50dp"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/my_shadow_y"
            android:text="@string/add_me_to_map"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="305dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:hint="@string/company_name_name"
                android:inputType="textPersonName"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_full_name"
                android:inputType="textPersonName"
                android:visibility="gone"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_phone"
                android:inputType="phone"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.80">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|start"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <Spinner
                            android:id="@+id/sp_country1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/spinner_backgroud"
                            android:gravity="center"
                            android:spinnerMode="dropdown"
                            android:visibility="visible" />

                        <ImageView
                            android:layout_width="49dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical|end"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/dropdown_yellow" />
                    </FrameLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.80">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|start"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <Spinner
                            android:id="@+id/sp_sub_country1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/spinner_backgroud"
                            android:gravity="center"
                            android:spinnerMode="dropdown"
                            android:visibility="visible" />

                        <ImageView
                            android:layout_width="49dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical|end"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/dropdown_yellow" />
                    </FrameLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_contry_code"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="4dp">

                </TextView>

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_mobile_phone"
                    android:inputType="phone" />
            </LinearLayout>


            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_adress"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_webadress"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_web_address"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_ad2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>